--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -43,11 +43,11 @@
 
 [Table 2: Dataset of road construction projects in USA]{.semibold} 
 
-![](images/Comp.png)
+![](images/Comp.PNG)
 
 [Table 3: A summary of pertinent information of road construction projects in USA]{.semibold}
 
-![](images/Comp2.png)
+![](images/Comp2.PNG)
 
 [2.2 Wrangling and feature derivation]{.semibold} 
 
@@ -71,7 +71,7 @@
 
 [Table 6: Extracted features for EDA]{.semibold} 
 
-![](images/Table6.png)
+![](images/Table6.PNG)
 
 <p align="justify">An indispensable aspect of EDA is to detect multicollinearity and prevent confounding in the modeling. Julia’s “Statistics” package was leveraged to compute and plot the correlation between all the independent (selected features) and the dependent variable (project duration). This plot not only enabled the discovery of statistically related features, but also enabled the realization of features that are pertinent to predicting the dependent variable. The figures below show the correlation plots for the selected features.</p>
 
@@ -110,7 +110,7 @@
 **__3.0. Predictive model development__**
 
  <p align="justify">The predictive model development stage would leverage both the original feature space (with either Temperature of Wind chill dropped out) and the PCA feature space. Series of classification tree networks would be developed and validated with a confusion matrix plot. For the PCA-feature-space case, given a test data observation, it must be transformed to the PCA coordinate frame before evaluation on the model. As stated earlier, the model would be validated on four folds i.e.,4 sets of the original data would be created, and three would be used for training, while one(1) for testing, and this process would be repeated on all four(4) sets of the data. This would potentially yield a robust and accurate model for the project task.</p>
-            
+
 [References:]{.semibold}
 
 1. Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, _2022_
