--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -124,30 +124,96 @@
 
 <p align="justify">Although one could imagine that the first 2 principal components (that account for over 97% of the variance in the data) would be sufficient for the classification task, this is not the case. The plots in Fig.7 reveal that the 4^th^, 5^th^, 6^th^, 7^th^, and 8^th^ PCA coordinate frames also offer significant promise for the project goal. Additionally, the boxplots created for outlier detection will further guide in the decision tree creation.  It can be seen from the plots in Fig. 7 and 8, that cuts can be made readily made to develop robust decision trees based on the [Gini-impurity algorithm](https://www.learndatasci.com/glossary/gini-impurity/).</p>
 
-**__3.0. Predictive model development__**
+**__3.0. Preliminary Modeling__**
 
- <p align="justify">The predictive model development stage would leverage both the original feature space (with either Temperature of Wind chill dropped out) and the PCA feature space. Series of classification tree networks would be developed and validated with a confusion matrix plot. For the PCA-feature-space case, given a test data observation, it must be transformed to the PCA coordinate frame before evaluation on the model. As stated earlier, the model would be validated on four folds i.e.,4 sets of the original data would be created, and three would be used for training, while one(1) for testing, and this process would be repeated on all four(4) sets of the data. This would potentially yield a robust and accurate model for the project task.</p>
+[3.1 Data Set for Predictive Modeling]{.semibold}
+ 
+ <p align="justify">Based on the exploratory analysis performed on the selected data set, a predictive model is built on eight potential weather features to predict the duration of road construction in terms of “short term”, “medium term”, or “long-term” project. This feature includes temperature, wind chill, humidity, pressure, visibility, wind speed, precipitation, and distance.</p> 
 
+<p align="justify">To initiate the predictive modeling, the wrangled dataset comprising pertinent features was randomly split into training set, testing set, and validation set having 60%, 20%, and 20% of observations respectively. To ensure the efficiency of predictive modeling, three kinds of datasets from the wrangled data were considered. The first dataset (case 1) was derived by defining the project duration as “short term” if the project duration is less than 100 days, “medium term” if the project duration is in between 100 through 300 days and “long term” if the project duration is greater than 300 days. The second dataset (case 2) is the PCA transformation of the first dataset’s features. Lastly, the third dataset (case 3) defines a “short term” project as one with project duration less than 120 days, “medium term” if the project duration is in between 120 through 200 days and “long term” if the project duration is greater than 200 days. The third dataset innovation was explored because initial results of the first dataset were not very satisfactory, and the determination of that thresholds is quite ambiguous.</p>
+ 
+[3.2 Methodology]{.semibold}
 
+<p align="justify">For the model development a deep neural network (DNN) [2] architecture – the sequential model from Keras library in Tensorflow was leveraged [3]. DNN was resorted due to the high dimensionality of the feature- space and the non-existence of a physical model that relates weather conditions to road construction project duration. Hence with DNN, patterns in the data feature-space would be automatically realised, weights would be generated to fit a model to the data and predict the output (project duration labels) given inputs of weather conditions (Temperature, Pressure, etc.). This sequential model accepts a single tensor of features and observations and returns a single tensor of labels for each observation as its output.  Furthermore, the Keras library offers various loss functions depending on the kind of model to be built. For this project, the categorical cross-entropy loss function [4] was leveraged for multi-class classification. Python offers great flexibility and computational speed when it comes to addressing multiclass classification problems, hence it was adopted for model development.</p>
 
+<p align="justify">As inputs, Temperature, Wind chill, Humidity, Pressure, Visibility, Wind speed, Precipitation, and Distance are the features used to train the model, the input size is eight. The labels from the dataset (i.e., the dependent variable which is the project duration class) is represented in the one-hot [5] format. To get the intended predictions, three hidden layers with five neurons each were initially defined. However, the final architecture included seven hidden layers as the initial three hidden layers resulted in 65% training accuracy, which was considered suboptimal. Therefore, in addition to input, and hidden layers, parameters like learning rate – the “Adams learning rate” [3] – a regularization factor that varied from 1e-3 to 1e-6, an epoch (number of steps of gradient descent) of 500, and a batch size of 10, were defined to complete the process of building and training the neural network. These parameters were chosen based on recommendations by [6].</p>
 
+<p align="justify">Additionally, the activation function between hidden layers was set to ReLU [7], since the input data were mainly numerical data that is continuous in space. However, the sigmoid [8] activation function was used between the last hidden layer and the output, because the output is categorical i.e., “short term”, “medium term” and “long term”. This sigmoid function computes the probability of occurrence of each label per observation, that ranges from 0 through 1. The predicted label from various observations is the one which has maximum output probability and is assigned as 1, keeping other labels as 0. To enhance global optimality, stochastic gradient descent “sgd” [9] was also tried as the learning rate function in the model development.</p>
 
+[3.3 Results]{.semibold}
 
+ <p align="justify">Having completed the model preparation and training, the open-source Sklearn [10] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and also plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
+![](images/Figure 1.png)
+<p align="justify">Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 65% accuracy was obtained on the training data, with a loss of about 0.6</p>
 
+<p align="justify">The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
+![](images/Figure 2.png)
+<p align="justify">Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
+Test metrics:{.semibold}
+<p align="justify">Precision: 0.35, 0.66, and 0.26 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
+<p align="justify">Recall:  0.22, 0.72, 0.19, for labels 1, 2, and 3 respectively</p>
+<p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
 
+![](images/Figure 3.png)
+<p align="justify">Fig 3. Confusion matrix for case 2 test dataset (i.e., case 1 dataset  in PCA coordinate frame), with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
+Test metrics:{.semibold}
+<p align="justify">Precision: 0.34, 0.66, and 0.36 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
+<p align="justify">Recall:  0.06, 0.95, 0.06, for labels 1, 2, and 3 respectively</p>
+<p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
 
+![](images/Figure 4.png)
+<p align="justify">Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
+Test metrics:{.semibold}
+<p align="justify">Precision: 0.52, 0.67, and 0.58 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
+<p align="justify">Recall:  0.08, 0.96, 0.11, for labels 1, 2, and 3 respectively</p>
+<p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
 
+![](images/Figure 5.png)
+<p align="justify">Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 65% accuracy was obtained on the training data, with a loss of about   0.9</p>
 
+<p align="justify">The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
+![](images/Figure 6.png)
+<p align="justify">CConfusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
+Test metrics:{.semibold}
+<p align="justify">Precision: 0.41, 0.30, and 0.45 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
+<p align="justify">Recall:  0.34, 0.29, 0.52, for labels 1, 2, and 3 respectively</p>
+<p align="justify">Proportion of each class in original dataset: 33%, 27% and 40% for label 1, 2 and 3 respectively</p>
+
+[3.4 Discussion and Inferences]{.semibold}
+
+<p align="justify">The model development could have resulted in a better output if the data was collected keeping the projects’ objective in mind. During the data wrangling stage, some observations were unrealistic as they had a very short duration for relatively long-span projects. Despite filtering and cleaning, the assumptions evoked could not sufficiently produce the near ideal dataset intended. Even with this challenge, the developed model performs quite well in some test cases as seen in section 3.3.</p>
+
+<p align="justify">It was observed that the model’s accuracy on the training data set increases with a denser neural network, and for very ambitious trials, an accuracy of about 90% was obtained on training data, even though performance on testing data was far less than 60%. This phenomenon was attributed to the possible overfitting of the training data. Therefore, such models were eschewed, and regularization enabled better generalizability of the developed models.</p>
+
+<p align="justify">The developed models have also been cross validated on some portions of the original dataset. For the next steps, the authors propose to explore other techniques for improving the model to enhance generalizability. Since there is no consensus threshold that classifies project durations into the three labels chosen in this work, the authors believe that case 3 is most realistic, since it gives an almost equal chance for classifying a given observation into the derived classes as seen from the confusion matrix plot in section 3.3. However, the difficulties currently encountered in establishing appropriate thresholds to categorize observations as "short-term," "medium-term," or "long-term" could present a potential research opportunity, one of figuring out which threshold produces the best/optimal classification results on cross validation. This can be seen as a problem of parameter identification or inverse analysis to determine suitable thresholds for classifying duration of road construction projects as “short term”, “medium term” or “long term”, based on which of the trail thresholds yields the best predictive model.</p>
+
+<p align="justify">Finally, the key lesson learnt is that the developed model is as good as the data, therefore experiments for scientific research must be planned in a way that effectively collects data concerning the project's stated hypothesis.</p>
 
 [References:]{.semibold}
 
-1. Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, _2022_
+[1] Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, _2022_
 
-2. US Road Construction and Closures _2016 - 2021 from Kaggle_
+[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," 2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. 1-6, doi: 10.1109/DASC.2016.7778092.
+
+[3] Keras sequential model, Tensorflow: https://keras.io/guides/sequential_model/
+
+[4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names: https://gombru.github.io/2018/05/23/cross_entropy_loss/
+
+[5] When to Use One-Hot Encoding in Deep Learning? https://analyticsindiamag.com/when-to-use-one-hot-encoding-in-deep-learning/
+
+[6] Constructing a Multi-Class Classifier Using Neural Network with Python: https://www.youtube.com/watch?v=2WdPdE2hq78
+
+[7] A Gentle Introduction to the Rectified Linear Unit (ReLU): https://machinelearningmastery.com/rectified-linear-activation-function-for-deep-learning-neural-networks/
+
+[8] A Gentle Introduction To Sigmoid Function: https://machinelearningmastery.com/a-gentle-introduction-to-sigmoid-function/
+
+[9] Stochastic Gradient Descent – Clearly Explained!! https://towardsdatascience.com/stochastic-gradient-descent-clearly-explained-53d239905d31
+
+[10] Confusion Matrix with Sklearn: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html
