--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -145,22 +145,26 @@
  <p align="justify">Having completed the model preparation and training, the open-source Sklearn [10] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and also plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
 ![](images/Figure 1.png)
-<p align="justify">Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 65% accuracy was obtained on the training data, with a loss of about 0.6</p>
+<p align="justify">Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 
 
-<p align="justify">The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
+<p align="justify">65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
 ![](images/Figure 2.png)
-<p align="justify">Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 87% accuracy was obtained on the training data, with a loss of about 0.3</p>
+<p align="justify">Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively.</p> 
 
-Test metrics:{.semibold}
+<p align="justify">87% accuracy was obtained on the training data, with a loss of about 0.3</p>
+
+[Test metrics:]{.semibold}
 <p align="justify">Precision: 0.35, 0.66, and 0.26 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
 <p align="justify">Recall:  0.22, 0.72, 0.19, for labels 1, 2, and 3 respectively</p>
 <p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
 
 ![](images/Figure 3.png)
-<p align="justify">Fig 3. Confusion matrix for case 2 test dataset (i.e., case 1 dataset  in PCA coordinate frame), with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
+<p align="justify">Fig 3. Confusion matrix for case 2 test dataset (i.e., case 1 dataset  in PCA coordinate frame), with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively.</p> 
 
-Test metrics:{.semibold}
+<p align="justify">68% accuracy was obtained on the training data, with a loss of about 0.7</p>
+
+[Test metrics:]{.semibold}
 <p align="justify">Precision: 0.34, 0.66, and 0.36 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
 <p align="justify">Recall:  0.06, 0.95, 0.06, for labels 1, 2, and 3 respectively</p>
 <p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
@@ -168,7 +172,7 @@ Test metrics:{.semibold}
 ![](images/Figure 4.png)
 <p align="justify">Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
-Test metrics:{.semibold}
+[Test metrics:]{.semibold}
 <p align="justify">Precision: 0.52, 0.67, and 0.58 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
 <p align="justify">Recall:  0.08, 0.96, 0.11, for labels 1, 2, and 3 respectively</p>
 <p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
@@ -181,7 +185,7 @@ Test metrics:{.semibold}
 ![](images/Figure 6.png)
 <p align="justify">CConfusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
-Test metrics:{.semibold}
+[Test metrics:]{.semibold}
 <p align="justify">Precision: 0.41, 0.30, and 0.45 for label 1, 2 and 3 respectively i.e., “short term”, “medium term” and “long term”</p>
 <p align="justify">Recall:  0.34, 0.29, 0.52, for labels 1, 2, and 3 respectively</p>
 <p align="justify">Proportion of each class in original dataset: 33%, 27% and 40% for label 1, 2 and 3 respectively</p>
@@ -202,7 +206,9 @@ Test metrics:{.semibold}
 
 [2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," 2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. 1-6, doi: 10.1109/DASC.2016.7778092.
 
-[3] Keras sequential model, Tensorflow: https://keras.io/guides/sequential_model/
+[@{https://greenelab.github.io/meta-review/}]
+
+[3] Keras sequential model, Tensorflow: [@{https://keras.io/guides/sequential_model/}]
 
 [4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names: https://gombru.github.io/2018/05/23/cross_entropy_loss/
 
