--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -206,9 +206,7 @@
 
 [2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," 2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. 1-6, doi: 10.1109/DASC.2016.7778092.
 
-[@{https://greenelab.github.io/meta-review/}]
-
-[3] Keras sequential model, Tensorflow: [@{https://keras.io/guides/sequential_model/}]
+[3] Keras sequential model, Tensorflow: https://keras.io/guides/sequential_model/
 
 [4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names: https://gombru.github.io/2018/05/23/cross_entropy_loss/
 
