--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -144,14 +144,12 @@
 
  <p align="justify">Having completed the model preparation and training, the open-source Sklearn [10] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and also plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.</p>
 
-![](images/Figure 1.png)
-<p align="justify">Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 
-
+<p align="center">![](images/Figure 1.png)</p>
+<p align="justify">Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively.</p> 
 <p align="justify">65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
 ![](images/Figure 2.png)
 <p align="justify">Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively.</p> 
-
 <p align="justify">87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
 [Test metrics:]{.semibold}
@@ -204,20 +202,20 @@
 
 [1] Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, _2022_
 
-[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," 2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. 1-6, doi: 10.1109/DASC.2016.7778092.
+[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, "A deep learning approach to flight delay prediction," _2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. 1-6, doi: 10.1109/DASC.2016.7778092._
 
-[3] Keras sequential model, Tensorflow: https://keras.io/guides/sequential_model/
+[3] Keras sequential model, Tensorflow: [@{https://keras.io/guides/sequential_model/}]
 
-[4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names: https://gombru.github.io/2018/05/23/cross_entropy_loss/
+[4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names: [@{https://gombru.github.io/2018/05/23/cross_entropy_loss/}]
 
-[5] When to Use One-Hot Encoding in Deep Learning? https://analyticsindiamag.com/when-to-use-one-hot-encoding-in-deep-learning/
+[5] When to Use One-Hot Encoding in Deep Learning? [@{https://analyticsindiamag.com/when-to-use-one-hot-encoding-in-deep-learning/}]
 
-[6] Constructing a Multi-Class Classifier Using Neural Network with Python: https://www.youtube.com/watch?v=2WdPdE2hq78
+[6] Constructing a Multi-Class Classifier Using Neural Network with Python: [@{https://www.youtube.com/watch?v=2WdPdE2hq78}]
 
-[7] A Gentle Introduction to the Rectified Linear Unit (ReLU): https://machinelearningmastery.com/rectified-linear-activation-function-for-deep-learning-neural-networks/
+[7] A Gentle Introduction to the Rectified Linear Unit (ReLU): [@{https://machinelearningmastery.com/rectified-linear-activation-function-for-deep-learning-neural-networks/}]
 
-[8] A Gentle Introduction To Sigmoid Function: https://machinelearningmastery.com/a-gentle-introduction-to-sigmoid-function/
+[8] A Gentle Introduction To Sigmoid Function: [@{https://machinelearningmastery.com/a-gentle-introduction-to-sigmoid-function/}]
 
-[9] Stochastic Gradient Descent – Clearly Explained!! https://towardsdatascience.com/stochastic-gradient-descent-clearly-explained-53d239905d31
+[9] Stochastic Gradient Descent – Clearly Explained!! [@{https://towardsdatascience.com/stochastic-gradient-descent-clearly-explained-53d239905d31}]
 
-[10] Confusion Matrix with Sklearn: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html
+[10] Confusion Matrix with Sklearn: [@{https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html}]
