--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -148,7 +148,7 @@
 <p align="justify">Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively.</p> 
 <p align="justify">65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
-![](images/Figure 2.png)
+<p align="center">![](images/Figure 2.png)</p>
 <p align="justify">Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively.</p> 
 <p align="justify">87% accuracy was obtained on the training data, with a loss of about 0.3</p>
 
@@ -157,7 +157,7 @@
 <p align="justify">Recall:  0.22, 0.72, 0.19, for labels 1, 2, and 3 respectively</p>
 <p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
 
-![](images/Figure 3.png)
+<p align="center">![](images/Figure 3.png)</p>
 <p align="justify">Fig 3. Confusion matrix for case 2 test dataset (i.e., case 1 dataset  in PCA coordinate frame), with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively.</p> 
 
 <p align="justify">68% accuracy was obtained on the training data, with a loss of about 0.7</p>
@@ -167,7 +167,7 @@
 <p align="justify">Recall:  0.06, 0.95, 0.06, for labels 1, 2, and 3 respectively</p>
 <p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
 
-![](images/Figure 4.png)
+<p align="center">![](images/Figure 4.png)</p>
 <p align="justify">Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7</p>
 
 [Test metrics:]{.semibold}
@@ -175,12 +175,12 @@
 <p align="justify">Recall:  0.08, 0.96, 0.11, for labels 1, 2, and 3 respectively</p>
 <p align="justify">Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively</p>
 
-![](images/Figure 5.png)
+<p align="center">![](images/Figure 5.png)</p>
 <p align="justify">Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 65% accuracy was obtained on the training data, with a loss of about   0.9</p>
 
 <p align="justify">The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.</p>
 
-![](images/Figure 6.png)
+<p align="center">![](images/Figure 6.png)</p>
 <p align="justify">CConfusion matrix for case 3 test dataset  with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 78% accuracy was obtained on the training data, with a loss of about 0.5</p>
 
 [Test metrics:]{.semibold}
